argo/middlewares.yaml
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-scheme-https
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: home-ipwhitelist
spec:
  ipWhiteList:
    sourceRange:
      - 24.7.13.111
